# PythonDevDIO

./: README.md
APItwitter/: .editorconfig  constants.py  docker-compose.yml  pyproject.toml  responses.py
Estruturadedados/desafio/: animais.py  dragao.py  supermercado.py
Estruturadedados/sistemabancario2/: sistemabancario2.py
Flask/: flaskAPI.py
FundamentosPython/: desafio.py  desafio2.py  desafio3.py  sistemabancario.py
POO/SistemaBancarioPOO/: sistemabancariopoo.py
bancodedados/: sqliteemongodb.py
pythonPandas/: pythonpandas.py  star_wars_character_dataset.csv
restAPI/: dev_api.py  run.py
